[gd_scene load_steps=22 format=1]

[ext_resource path="res://Script/toko.gd" type="Script" id=1]
[ext_resource path="res://Asset/game/bg2.png" type="Texture" id=2]
[ext_resource path="res://Asset/CooperHewitt-Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://database/icon_inventaris/genericItem_color_001.png" type="Texture" id=4]
[ext_resource path="res://database/icon_inventaris/genericItem_color_002.png" type="Texture" id=5]
[ext_resource path="res://database/icon_inventaris/genericItem_color_004.png" type="Texture" id=6]
[ext_resource path="res://database/icon_inventaris/genericItem_color_005.png" type="Texture" id=7]
[ext_resource path="res://database/icon_inventaris/genericItem_color_006.png" type="Texture" id=8]
[ext_resource path="res://database/icon_inventaris/genericItem_color_003.png" type="Texture" id=9]
[ext_resource path="res://database/icon_inventaris/genericItem_color_007.png" type="Texture" id=10]
[ext_resource path="res://database/icon_inventaris/genericItem_color_008.png" type="Texture" id=11]
[ext_resource path="res://database/icon_inventaris/genericItem_color_009.png" type="Texture" id=12]
[ext_resource path="res://Scene/coin.tscn" type="PackedScene" id=13]
[ext_resource path="res://Asset/kembali.png" type="Texture" id=14]
[ext_resource path="res://Asset/Menu/popup/background.png" type="Texture" id=15]
[ext_resource path="res://Asset/Menu/popup/ok.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 25
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 35
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]

font/size = 25
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]

font/size = 28
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="Node" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 639.146, 359.616 )
transform/scale = Vector2( 1.01422, 1.01825 )
texture = ExtResource( 2 )

[node name="Label toko" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 607.0
margin/top = 66.0
margin/right = 691.0
margin/bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "TOKO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="air" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 161.0
margin/right = 248.0
margin/bottom = 321.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true

[node name="sekop" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 439.0
margin/right = 278.0
margin/bottom = 626.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = true

[node name="celurit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 327.0
margin/top = 157.0
margin/right = 493.0
margin/bottom = 316.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = true

[node name="pupuk" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 323.0
margin/top = 444.0
margin/right = 488.0
margin/bottom = 603.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = true

[node name="sertifikatTanah" type="Button" parent="."]

rect/rotation = 0.699353
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 565.0
margin/top = 163.0
margin/right = 730.0
margin/bottom = 322.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = true

[node name="batang" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 571.0
margin/top = 441.0
margin/right = 764.0
margin/bottom = 628.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = true

[node name="bibitPutih" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 814.0
margin/top = 163.0
margin/right = 1007.0
margin/bottom = 350.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = true

[node name="bibitMerah" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 820.0
margin/top = 447.0
margin/right = 1013.0
margin/bottom = 634.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = true

[node name="bibitKuning" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1059.0
margin/top = 166.0
margin/right = 1252.0
margin/bottom = 353.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="WindowDialogBeli" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 403.0
margin/top = 312.0
margin/right = 850.0
margin/bottom = 530.0
popup/exclusive = false
window/title = ""

[node name="Label" type="Label" parent="WindowDialogBeli"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 183.0
margin/top = 37.0
margin/right = 302.0
margin/bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Jumlah :"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beli" type="Button" parent="WindowDialogBeli"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 51.0
margin/top = 148.0
margin/right = 175.0
margin/bottom = 192.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BELI"
flat = false

[node name="tutup" type="Button" parent="WindowDialogBeli"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 150.0
margin/right = 400.0
margin/bottom = 194.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TUTUP"
flat = false

[node name="pilihJumlah" type="SpinBox" parent="WindowDialogBeli"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 174.0
margin/top = 78.0
margin/right = 289.0
margin/bottom = 102.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="WindowDialogBeliAlat" type="WindowDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 403.0
margin/top = 312.0
margin/right = 850.0
margin/bottom = 530.0
popup/exclusive = false
window/title = ""

[node name="labelBeliAlat" type="Label" parent="WindowDialogBeliAlat"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 64.0
margin/right = 439.0
margin/bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Beli"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beli" type="Button" parent="WindowDialogBeliAlat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 147.0
margin/right = 172.0
margin/bottom = 191.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BELI"
flat = false

[node name="tutup" type="Button" parent="WindowDialogBeliAlat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 276.0
margin/top = 150.0
margin/right = 400.0
margin/bottom = 194.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TUTUP"
flat = false

[node name="info" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 371.0
margin/top = 241.0
margin/right = 897.0
margin/bottom = 555.0
popup/exclusive = false
window/title = ""

[node name="deskripsi" type="RichTextLabel" parent="info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 28.0
margin/right = 508.0
margin/bottom = 206.0
custom_fonts/normal_font = SubResource( 4 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="beliInfo" type="Button" parent="info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 109.0
margin/top = 236.0
margin/right = 233.0
margin/bottom = 280.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BELI"
flat = false

[node name="tutupInfo" type="Button" parent="info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 294.0
margin/top = 233.0
margin/right = 418.0
margin/bottom = 277.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "TUTUP"
flat = false

[node name="coin" parent="." instance=ExtResource( 13 )]

transform/pos = Vector2( 1179.05, 32.5589 )

[node name="kembali" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 17.0
margin/right = 237.0
margin/bottom = 83.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[node name="popupPembelian" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 645.576, 363.303 )
texture = ExtResource( 15 )

[node name="ok" type="Button" parent="popupPembelian"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -22.0
margin/top = 84.0
margin/right = 21.0
margin/bottom = 110.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true

[node name="pesan" type="Label" parent="popupPembelian"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -232.0
margin/top = -97.0
margin/right = 230.0
margin/bottom = 51.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.208862, 0.58765, 0.921875, 1 )
text = "PESAN"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="air" to="." method="_on_air_pressed"]

[connection signal="pressed" from="sekop" to="." method="_on_sekop_pressed"]

[connection signal="pressed" from="celurit" to="." method="_on_celurit_pressed"]

[connection signal="pressed" from="pupuk" to="." method="_on_pupuk_pressed"]

[connection signal="pressed" from="sertifikatTanah" to="." method="_on_sertifikatTanah_pressed"]

[connection signal="pressed" from="batang" to="." method="_on_batang_pressed"]

[connection signal="pressed" from="bibitPutih" to="." method="_on_bibitPutih_pressed"]

[connection signal="pressed" from="bibitMerah" to="." method="_on_bibitMerah_pressed"]

[connection signal="pressed" from="bibitKuning" to="." method="_on_bibitKuning_pressed"]

[connection signal="pressed" from="WindowDialogBeli/beli" to="." method="_on_beli_pressed"]

[connection signal="pressed" from="WindowDialogBeli/tutup" to="." method="_on_tutup_pressed"]

[connection signal="pressed" from="WindowDialogBeliAlat/beli" to="." method="_on_beli_pressed"]

[connection signal="pressed" from="WindowDialogBeliAlat/tutup" to="." method="_on_tutup_pressed"]

[connection signal="pressed" from="info/beliInfo" to="." method="_on_beliInfo_pressed"]

[connection signal="pressed" from="info/tutupInfo" to="." method="_on_tutupInfo_pressed"]

[connection signal="pressed" from="kembali" to="." method="_on_kembali_pressed"]

[connection signal="pressed" from="popupPembelian/ok" to="." method="_on_ok_pressed"]


